feat: remux and transcode playback
